# ge

./: CMakeLists.txt
courses/PA199/project/: CMakeLists.txt  application.cpp  application.hpp
courses/PA199/project/data/shaders/: default.frag  lit.frag  lit.vert  unlit.frag  unlit.vert
courses/PA199/project/devlog/: devlog.md
courses/PA199/project/gel/: CMakeLists.txt  camera_component.hpp  circle_renderer_component.cpp  circle_renderer_component.hpp  cube_renderer_component.cpp  cube_renderer_component.hpp  game_component.cpp  game_component.hpp  game_entity.cpp  game_entity.hpp  game_scene.cpp  game_scene.hpp  gel.hpp  mesh_renderer_component.cpp  mesh_renderer_component.hpp  plane_renderer_component.cpp  sphere_renderer_component.cpp  sphere_renderer_component.hpp  test_component.cpp  test_component.hpp
courses/PA199/project/gel/camera/: camera_component.cpp  camera_component.hpp
courses/PA199/project/gel/control/: ball_reset_component.hpp  paddle_controller_component.cpp  paddle_controller_component.hpp
courses/PA199/project/gel/light/: directional_light_component.hpp  light_component.cpp  light_component.hpp  point_light_component.hpp
courses/PA199/project/gel/physics/: adhoc_brick_broadphase_collision_component.hpp  adhoc_paddle_broadphase_collision_component.hpp  rigidbody_component.hpp
courses/PA199/project/gel/renderer/: arc_renderer_component.hpp  cylinder_renderer_component.cpp  cylinder_renderer_component.hpp  mesh_renderer_component.hpp  plane_renderer_component.hpp  renderer_component.hpp
courses/PA199/project/gel/util/: shader_resource.hpp
courses/PA199/project/gem/: CMakeLists.txt  axis_angle.cpp  axis_angle.hpp  coordinates.cpp  coordinates.hpp  gem.hpp  interpolation.cpp  interpolation.hpp  matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  vector.cpp  vector.hpp
courses/PA199/project/mathlib/: CMakeLists.txt  axis_angle.cpp  axis_angle.hpp  interpolation.cpp  interpolation.hpp  matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  unit.hpp  vector.cpp  vector.hpp
courses/PA199/project/test/: CMakeLists.txt  mathlib_matrix_test.cpp  mathlib_quaternion_test.cpp  mathlib_test.cpp  mathlib_vector_test.cpp
courses/PA199/project/test/gel/: gel_game_component_test.cpp  gel_game_entity_test.cpp  gel_game_scene.cpp
courses/PA199/project/test/gem/: gem_axis_angles_test.cpp  gem_matrix_test.cpp  gem_quaternion_test.cpp  gem_vector_test.cpp
